--- a/src/main/webapp/WEB-INF/views/first/hello.html
+++ b/src/main/webapp/WEB-INF/views/first/hello.html
@@ -8,6 +8,7 @@
 Hello!
 
 <a href="/first/goodbye">Say hello!</a>
-<a href="/exit">Exit</a>
+<a href="/exit">Exit</a><br>
+<a href="/first/hello?name=Mihail&surname=Karpeykin">Request with parameters</a>
 </body>
 </html>
